<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="app_name_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="app_name_scores">SCORES APP</string>
    <string name="app_name_library">LIBRARY APP</string>
    <string name="app_name_build_it_bigger">BUILD IT BIGGER</string>
    <string name="app_name_xyz_reader">XYZ READER</string>
    <string name="app_name_capstone">CAPSTONE: MY OWN APP</string>
</resources>
