<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/main_bg">

    <TextView android:text="@string/title"
        android:id="@+id/titleTextViewiew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"/>

    <Button android:text="@string/app_name_spotify_streamer"
        android:id="@+id/spotifyAppButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/titleTextViewiew"
        android:layout_centerHorizontal="true"
        android:background="@color/button_bg"
        android:layout_marginBottom="10dp"/>

    <Button android:text="@string/app_name_scores"
        android:id="@+id/scoresAppButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/spotifyAppButton"
        android:layout_centerHorizontal="true"
        android:background="@color/button_bg"
        android:layout_marginBottom="10dp"/>

    <Button android:text="@string/app_name_library"
        android:id="@+id/libraryAppButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/scoresAppButton"
        android:layout_centerHorizontal="true"
        android:background="@color/button_bg"
        android:layout_marginBottom="10dp"/>

    <Button android:text="@string/app_name_build_it_bigger"
        android:id="@+id/bibAppButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/libraryAppButton"
        android:layout_centerHorizontal="true"
        android:background="@color/button_bg"
        android:layout_marginBottom="10dp"/>

    <Button android:text="@string/app_name_xyz_reader"
        android:id="@+id/xyzAppButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/bibAppButton"
        android:layout_centerHorizontal="true"
        android:background="@color/button_bg"
        android:layout_marginBottom="10dp"/>

    <Button android:text="@string/app_name_capstone"
        android:id="@+id/capstoneAppButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/xyzAppButton"
        android:layout_centerHorizontal="true"
        android:background="@color/capstone_button_bg"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
